Bug 447595 - Unity layout / dual screen - problem with maximized windows
Summary: Unity layout / dual screen - problem with maximized windows
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.6
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-28 08:19 UTC by Manuel Laggner
Modified: 2022-01-01 07:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Unity layout with plasma (1.26 MB, image/png)
2021-12-29 14:21 UTC, Manuel Laggner
Details
Unity layout with latte (1.23 MB, image/png)
2021-12-29 14:21 UTC, Manuel Laggner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Laggner 2021-12-28 08:19:43 UTC
SUMMARY
***
If you use the default unity layout in a dual screen setup, maximized windows go below the left panel. The same setup works in single screen setups.

My screen setup is the following:

LEFT: laptop screen (1920x1080) / no latte dock on that screen
RIGHT: main screen (2560x1440) / Top panel and left panel

When I maximize a window on the RIGHT screen, the window goes below the LEFT panel, but not below the TOP panel. 
***


STEPS TO REPRODUCE
1.  Setup a dual monitor environment
2.  make sure the RIGHT screen is the main screen containing a unity layout of latte (tested with 0.10.6)
3. maximize any application on the RIGHT (main) screen. Tested with Firefox and Dolphin

OBSERVED RESULT

The maximized widows go below the LEFT panel

EXPECTED RESULT

The maximized windows should NOT go below the LEFT panel (the same way as with the TOP panel)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 5.18.7
KDE Frameworks Version: 5.68
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2021-12-28 08:37:36 UTC
Of course it doesnt and this is intentional.

KWin can not support under x11 such scenario, if it worked as expected then windows at your left monitor wouldnt be even accessible, workable etc... your left monitor would become useless...

That is also known to Plasma team and this is why plasma panels work in the same way.
If plasma panels do not catch that multi-screen scenario then this is a bug of Plasma.
Comment 2 Manuel Laggner 2021-12-29 14:20:54 UTC
I've just tried to reproduce the issue using plasma panels and it works there (see left_panel.png). When I try to use latte (because with default plasma panels, you cannot get a good unity layout), the maximized window goes below the left panel (see left_panel_latte.png).
Comment 3 Manuel Laggner 2021-12-29 14:21:19 UTC
Created attachment 144934 [details]
Unity layout with plasma
Comment 4 Manuel Laggner 2021-12-29 14:21:36 UTC
Created attachment 144935 [details]
Unity layout with latte
Comment 5 Michail Vourlakos 2021-12-29 15:28:11 UTC
You can stick with plasma panels then. My guess is that plasma panels will also fail after a while.
Comment 6 Manuel Laggner 2021-12-29 16:01:40 UTC
the problem with plasma is that they overlap in the upper left corner and that's why we need to stick with latte...
Comment 7 Michail Vourlakos 2021-12-29 16:22:17 UTC
(In reply to Manuel Laggner from comment #6)
> the problem with plasma is that they overlap in the upper left corner and
> that's why we need to stick with latte...

are you a distro maintainer?
Comment 8 Michail Vourlakos 2021-12-29 16:52:15 UTC
Git commit 0f7a4bcd10da2ce154f0c0468a72e02a6e54cd5c by Michail Vourlakos.
Committed on 29/12/2021 at 16:50.
Pushed by mvourlakos into branch 'v0.10'.

always trust KWin for setting struts

--when kwin is running then we should always
trust it in order to provide correct struts.
That applies also under x11 where other wms
might fail.
FIXEX-IN:0.10.7

M  +4    -9    app/view/visibilitymanager.cpp

https://invent.kde.org/plasma/latte-dock/commit/0f7a4bcd10da2ce154f0c0468a72e02a6e54cd5c
Comment 9 Michail Vourlakos 2021-12-29 16:53:10 UTC
Git commit 8bd168a5a53e88f56b4f0ce674b1a214db53f6ea by Michail Vourlakos.
Committed on 29/12/2021 at 16:52.
Pushed by mvourlakos into branch 'master'.

always trust KWin for setting struts

--when kwin is running then we should always
trust it in order to provide correct struts.
That applies also under x11 where other wms
might fail.
FIXEX-IN:0.10.7

M  +4    -9    app/view/visibilitymanager.cpp

https://invent.kde.org/plasma/latte-dock/commit/8bd168a5a53e88f56b4f0ce674b1a214db53f6ea
Comment 10 Michail Vourlakos 2021-12-29 16:54:31 UTC
bug report was correct... rechecked Plasma code, we should always trust KWin to set proper struts and if it fails then we should just restart KWin or Latte
Comment 11 Manuel Laggner 2021-12-29 18:51:45 UTC
sorry, bad wording here. I am no maintainer -  I just spoke about us users which want a unity setup in KDE plasma
Comment 12 Manuel Laggner 2022-01-01 07:26:36 UTC
I can confirm that the latest version of branch v0.10 works as expected!

kudos