always trust KWin for setting struts

--when kwin is running then we should always
trust it in order to provide correct struts.
That applies also under x11 where other wms
might fail.

BUG:447595
FIXEX-IN:0.10.7